--- a/src/analysis/Q_Price_Corr.ipynb
+++ b/src/analysis/Q_Price_Corr.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "\n",
+    "import numpy"
    ]
   },
   {
@@ -315,10 +317,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Heatmap thể hiện mức tương qua giữa Open price, High price, Low price, Close price"
+    "### Thể hiện mức tương qua giữa Open price, High price, Low price, Close price"
    ]
   },
   {
@@ -8462,7 +8465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -8492,19 +8495,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Open price</th>\n",
-       "      <td>-0.024817</td>\n",
+       "      <td>0.013891</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>High price</th>\n",
-       "      <td>0.069157</td>\n",
+       "      <td>0.049964</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Low price</th>\n",
-       "      <td>-0.073053</td>\n",
+       "      <td>-0.018578</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Close price</th>\n",
-       "      <td>0.011899</td>\n",
+       "      <td>0.017173</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Number of trades</th>\n",
@@ -8516,20 +8519,20 @@
       ],
       "text/plain": [
        "                  Number of trades\n",
-       "Open price               -0.024817\n",
-       "High price                0.069157\n",
-       "Low price                -0.073053\n",
-       "Close price               0.011899\n",
+       "Open price                0.013891\n",
+       "High price                0.049964\n",
+       "Low price                -0.018578\n",
+       "Close price               0.017173\n",
        "Number of trades          1.000000"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "price_df[price_df.Symbol == 'ETHBTC'][['Open price','High price','Low price','Close price','Number of trades']].corr()[['Number of trades']]"
+    "price_df[price_df.Symbol == 'ETHBTC'][['Open price','High price','Low price','Close price','Number of trades']].corr(method='kendall')[['Number of trades']]"
    ]
   },
   {
@@ -8542,7 +8545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8551,7 +8554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -18173,8 +18176,232 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tuy độ tương quan hầu như là không có, nhưng những thời điểm mà số lượng giao dịch trở lên cao, thấp bất chợt, thì tại thời điểm đó mức 4 tỉ giá cũng bị ảnh hưởng mạnh, nên có thể thấy là số lượng giao dịch tuy không có ảnh hưởng lâu dài về thời gian, nhưng cũng là một dấu hiệu cho sự biến động giá mạnh"
+    "#### Tuy độ tương quan hầu như là không có, nhưng những thời điểm mà số lượng giao dịch trở lên cao, thấp bất chợt, thì tại thời điểm đó mức 4 tỉ giá cũng bị ảnh hưởng mạnh, nên có thể thấy là số lượng giao dịch tuy không có ảnh hưởng lâu dài về thời gian, nhưng cũng là một dấu hiệu cho sự biến động giá mạnh\n",
+    "\n",
+    "> giờ ta thử xem các giá của symbol này có độ tương quan lớn với nhau không, với mục này ta chỉ xét trên một loại giá là 'High price'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "symbol_corr = price_df.pivot(index='Kline open time',columns='Symbol')['High price'].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1426.000000\n",
+       "mean        0.152925\n",
+       "std         0.367161\n",
+       "min        -0.761848\n",
+       "25%        -0.134962\n",
+       "50%         0.186292\n",
+       "75%         0.455984\n",
+       "max         1.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "symbol_corr.describe().mean(axis = 1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> cũng có thể thấy ở đây chúng ta sẽ cũng không có nhiều sự tương quan trong biến đổi giá của các đồng"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top = dict(zip([i + ' ' + j for i in symbol_corr.columns for j in symbol_corr.columns],symbol_corr.to_numpy().flatten())) #chuyen thanh dictionary\n",
+    "top = {key:val for key, val in top.items() \n",
+    "                if key.split() != key.split()[::-1]  # tự so với bản thân\n",
+    "                and 'UP' not in key and 'DOWN' not in key and  # các đống up down (thực sự không mang nhiều ý nghĩa)\n",
+    "                abs(val)  >= 0.95}  #giá trị tương quan phải cao\n",
+    "top = numpy.array(sorted(top.items(), key=lambda kv: kv[1]))#sort\n",
+    "top = top[::2] # remove duplicate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "symbols = price_df.drop_duplicates(subset='Symbol')[['Symbol','base','quote']]\n",
+    "new_top = []\n",
+    "for i in top:\n",
+    "    a,b = i[0].split(' ')\n",
+    "    if symbols[(symbols.Symbol == a)|(symbols.Symbol == b)][['base','quote']].unstack().nunique() == 4:\n",
+    "        new_top += [i]        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(115,\n",
+       " [array(['RUNEBNB TFUELBTC', '-0.9614654162500887'], dtype='<U32'),\n",
+       "  array(['RUNEBNB XLMBTC', '-0.9610995141412478'], dtype='<U32'),\n",
+       "  array(['BUSDUSDT MATICBNB', '-0.9594465345665986'], dtype='<U32'),\n",
+       "  array(['TFUELBTC XMRBNB', '-0.9594032674993581'], dtype='<U32'),\n",
+       "  array(['RUNEBNB XLMETH', '-0.9555043076388604'], dtype='<U32'),\n",
+       "  array(['HBARBTC RUNEBNB', '-0.953430104926986'], dtype='<U32'),\n",
+       "  array(['ETCETH XMRBNB', '-0.952206825285223'], dtype='<U32'),\n",
+       "  array(['ETCBTC XMRBNB', '-0.9517356889522204'], dtype='<U32'),\n",
+       "  array(['ETCETH RUNEBNB', '-0.9516336112746239'], dtype='<U32'),\n",
+       "  array(['CHZEUR FLOWUSDT', '0.9500952564600174'], dtype='<U32'),\n",
+       "  array(['PORTOEUR SANTOSUSDT', '0.9501128334384525'], dtype='<U32'),\n",
+       "  array(['ADABTC CHZEUR', '0.9501140997102067'], dtype='<U32'),\n",
+       "  array(['STORJBTC TFUELBUSD', '0.950185389728831'], dtype='<U32'),\n",
+       "  array(['CHZTRY PORTOBUSD', '0.9502345671593191'], dtype='<U32'),\n",
+       "  array(['LAZIOTRY SANTOSBUSD', '0.9503583640119192'], dtype='<U32'),\n",
+       "  array(['STORJBTC TFUELUSDT', '0.950371746803773'], dtype='<U32'),\n",
+       "  array(['ALGOETH ETCBTC', '0.9504084578358121'], dtype='<U32'),\n",
+       "  array(['ADABTC CHZBUSD', '0.9504683668579643'], dtype='<U32'),\n",
+       "  array(['1INCHBUSD XLMTRY', '0.9504879886900645'], dtype='<U32'),\n",
+       "  array(['LAZIOTRY SANTOSUSDT', '0.9505547874464562'], dtype='<U32'),\n",
+       "  array(['CHZUSDT FLOWBUSD', '0.9505556927648013'], dtype='<U32'),\n",
+       "  array(['LAZIOBUSD SANTOSUSDT', '0.950579576773047'], dtype='<U32'),\n",
+       "  array(['CHZTRY PORTOUSDT', '0.950663373201831'], dtype='<U32'),\n",
+       "  array(['LAZIOUSDT SANTOSBUSD', '0.9506873052256659'], dtype='<U32'),\n",
+       "  array(['ADABTC CHZUSDT', '0.9506955378610091'], dtype='<U32'),\n",
+       "  array(['1INCHUSDT XLMTRY', '0.9508610055353501'], dtype='<U32'),\n",
+       "  array(['1INCHBUSD TFUELUSDT', '0.9508828253738159'], dtype='<U32'),\n",
+       "  array(['LAZIOBUSD SANTOSTRY', '0.9509872612841206'], dtype='<U32'),\n",
+       "  array(['ALGOETH IOTABTC', '0.9511630557828195'], dtype='<U32'),\n",
+       "  array(['LAZIOBUSD PORTOTRY', '0.9513249321958835'], dtype='<U32'),\n",
+       "  array(['LAZIOUSDT SANTOSTRY', '0.9513859289002794'], dtype='<U32'),\n",
+       "  array(['CHZBUSD FLOWUSDT', '0.9515227603493593'], dtype='<U32'),\n",
+       "  array(['ADABTC CHZGBP', '0.9516179662146269'], dtype='<U32'),\n",
+       "  array(['ALGOETH ANKRBTC', '0.9518185096811247'], dtype='<U32'),\n",
+       "  array(['LAZIOUSDT PORTOTRY', '0.951909572401541'], dtype='<U32'),\n",
+       "  array(['HNTBUSD THETABTC', '0.951936481534628'], dtype='<U32'),\n",
+       "  array(['1INCHUSDT TFUELBUSD', '0.952128780006257'], dtype='<U32'),\n",
+       "  array(['BNBETH BUSDUSDT', '0.9524275301715758'], dtype='<U32'),\n",
+       "  array(['CHZBRL PORTOTRY', '0.952488172770433'], dtype='<U32'),\n",
+       "  array(['TFUELUSDT THETABUSD', '0.9527361851480136'], dtype='<U32'),\n",
+       "  array(['TFUELBUSD THETAUSDT', '0.9527548456209922'], dtype='<U32'),\n",
+       "  array(['CHZGBP FLOWBUSD', '0.9528432828784135'], dtype='<U32'),\n",
+       "  array(['CHZBRL FLOWBTC', '0.9529659393419172'], dtype='<U32'),\n",
+       "  array(['ANKRBUSD TFUELUSDT', '0.9530367755822103'], dtype='<U32'),\n",
+       "  array(['LAZIOEUR SANTOSBUSD', '0.9537062859553171'], dtype='<U32'),\n",
+       "  array(['ALGOETH CHZBTC', '0.9539428427378344'], dtype='<U32'),\n",
+       "  array(['CHZGBP FLOWUSDT', '0.953975905366071'], dtype='<U32'),\n",
+       "  array(['BNBBTC ETCETH', '0.9539912412822886'], dtype='<U32'),\n",
+       "  array(['LAZIOEUR SANTOSUSDT', '0.9542892212043591'], dtype='<U32'),\n",
+       "  array(['ALGOTRY MKRBUSD', '0.9543688729103006'], dtype='<U32'),\n",
+       "  array(['LAZIOBUSD PORTOUSDT', '0.9545848800861861'], dtype='<U32'),\n",
+       "  array(['ALGOUSDT MKRBUSD', '0.9547262705507668'], dtype='<U32'),\n",
+       "  array(['ANKRUSDT TFUELBUSD', '0.9548514504624045'], dtype='<U32'),\n",
+       "  array(['ALGOBUSD MKRUSDT', '0.9548584648700924'], dtype='<U32'),\n",
+       "  array(['CHZEUR FLOWBTC', '0.954970482497397'], dtype='<U32'),\n",
+       "  array(['LAZIOBTC PORTOTRY', '0.9549774819745496'], dtype='<U32'),\n",
+       "  array(['TFUELBUSD XLMEUR', '0.954979054670028'], dtype='<U32'),\n",
+       "  array(['PORTOEUR SANTOSTRY', '0.9551441036782614'], dtype='<U32'),\n",
+       "  array(['LAZIOUSDT PORTOBUSD', '0.9552059795187104'], dtype='<U32'),\n",
+       "  array(['ANKRBUSD ETCTRY', '0.955240390065119'], dtype='<U32'),\n",
+       "  array(['ALGOTRY MKRUSDT', '0.9554841363725842'], dtype='<U32'),\n",
+       "  array(['1INCHBTC ALGOETH', '0.9555075289654889'], dtype='<U32'),\n",
+       "  array(['ADABTC CHZTRY', '0.9557030029552815'], dtype='<U32'),\n",
+       "  array(['1INCHBUSD LDOBTC', '0.9557372397465816'], dtype='<U32'),\n",
+       "  array(['ANKRUSDT ETCTRY', '0.955898645693855'], dtype='<U32'),\n",
+       "  array(['TFUELUSDT XLMEUR', '0.9560344181718128'], dtype='<U32'),\n",
+       "  array(['MATICUSDT OPBUSD', '0.956340110960744'], dtype='<U32'),\n",
+       "  array(['JUVUSDT PSGBUSD', '0.9564317292871256'], dtype='<U32'),\n",
+       "  array(['MATICBUSD OPUSDT', '0.9565451258561283'], dtype='<U32'),\n",
+       "  array(['PORTOUSDT SANTOSBTC', '0.9566683458516988'], dtype='<U32'),\n",
+       "  array(['PORTOBUSD SANTOSBTC', '0.9567157990782784'], dtype='<U32'),\n",
+       "  array(['BETHBUSD ETHEUR', '0.9567235060986387'], dtype='<U32'),\n",
+       "  array(['1INCHUSDT LDOBTC', '0.9571489368356781'], dtype='<U32'),\n",
+       "  array(['ETCBTC TFUELBUSD', '0.9573446345332463'], dtype='<U32'),\n",
+       "  array(['LAZIOEUR SANTOSTRY', '0.9575112918069197'], dtype='<U32'),\n",
+       "  array(['BETHBUSD ETHBIDR', '0.9575580285385249'], dtype='<U32'),\n",
+       "  array(['TFUELBTC THETAETH', '0.9585350292667244'], dtype='<U32'),\n",
+       "  array(['MATICRUB OPUSDT', '0.9585942813449059'], dtype='<U32'),\n",
+       "  array(['ETCBTC TFUELUSDT', '0.9588006122893621'], dtype='<U32'),\n",
+       "  array(['MATICRUB OPBUSD', '0.9588189632954456'], dtype='<U32'),\n",
+       "  array(['LAZIOTRY PORTOUSDT', '0.95886187704028'], dtype='<U32'),\n",
+       "  array(['LAZIOTRY PORTOBUSD', '0.9590355123864918'], dtype='<U32'),\n",
+       "  array(['ADABTC CHZBRL', '0.9595144586762727'], dtype='<U32'),\n",
+       "  array(['ANKRTRY TFUELUSDT', '0.9601151392996279'], dtype='<U32'),\n",
+       "  array(['ANKRTRY TFUELBUSD', '0.9603875713921955'], dtype='<U32'),\n",
+       "  array(['THETAETH XLMBTC', '0.9605196271229088'], dtype='<U32'),\n",
+       "  array(['BETHBUSD ETHDAI', '0.9610834616066448'], dtype='<U32'),\n",
+       "  array(['BUSDBIDR USDTIDRT', '0.9612642462785943'], dtype='<U32'),\n",
+       "  array(['CHZGBP FLOWBTC', '0.962424379010877'], dtype='<U32'),\n",
+       "  array(['PORTOTRY SANTOSBTC', '0.9626619905164191'], dtype='<U32'),\n",
+       "  array(['ALGOETH TFUELBTC', '0.9629975680095033'], dtype='<U32'),\n",
+       "  array(['HNTBUSD XLMBTC', '0.9633969282497261'], dtype='<U32'),\n",
+       "  array(['LAZIOEUR PORTOTRY', '0.9650873693773133'], dtype='<U32'),\n",
+       "  array(['HNTBUSD TFUELBTC', '0.9652859643618771'], dtype='<U32'),\n",
+       "  array(['ALGOETH XLMBTC', '0.9658551448875513'], dtype='<U32'),\n",
+       "  array(['LAZIOEUR PORTOUSDT', '0.9659742271583872'], dtype='<U32'),\n",
+       "  array(['LAZIOEUR PORTOBUSD', '0.9660016434351998'], dtype='<U32'),\n",
+       "  array(['1INCHBTC HNTBUSD', '0.967048564924264'], dtype='<U32'),\n",
+       "  array(['PORTOTRY SANTOSBUSD', '0.9679664175028382'], dtype='<U32'),\n",
+       "  array(['PORTOTRY SANTOSUSDT', '0.9684545997449663'], dtype='<U32'),\n",
+       "  array(['TFUELUSDT XLMBUSD', '0.9688424480294313'], dtype='<U32'),\n",
+       "  array(['TFUELBUSD XLMUSDT', '0.9695813451267249'], dtype='<U32'),\n",
+       "  array(['BETHBUSD ETHAUD', '0.9700463936705579'], dtype='<U32'),\n",
+       "  array(['1INCHBUSD ALGOBTC', '0.9702797573323675'], dtype='<U32'),\n",
+       "  array(['1INCHUSDT ALGOBTC', '0.9707486225017115'], dtype='<U32'),\n",
+       "  array(['PORTOUSDT SANTOSBUSD', '0.9715340944946259'], dtype='<U32'),\n",
+       "  array(['PORTOBUSD SANTOSUSDT', '0.9720608995202703'], dtype='<U32'),\n",
+       "  array(['TFUELBUSD XLMTRY', '0.972468407440621'], dtype='<U32'),\n",
+       "  array(['TFUELUSDT XLMTRY', '0.9727118450740911'], dtype='<U32'),\n",
+       "  array(['PORTOUSDT SANTOSTRY', '0.9751580005377415'], dtype='<U32'),\n",
+       "  array(['PORTOBUSD SANTOSTRY', '0.9752525962142049'], dtype='<U32'),\n",
+       "  array(['BETHBUSD ETHTRY', '0.9825535043680983'], dtype='<U32'),\n",
+       "  array(['BTCTRY WBTCBUSD', '0.9836609333324103'], dtype='<U32'),\n",
+       "  array(['BETHBUSD ETHUSDT', '0.9862283616998704'], dtype='<U32'),\n",
+       "  array(['BTCUSDT WBTCBUSD', '0.9901109419999654'], dtype='<U32')])"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(new_top),new_top"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ta có được 115 cặp, nhưng đa số ở đây là các cặp sẽ liên quan đến các đồng tiền ổn định, cho nên việc tương quan giữa các đồng này cũng không thực sự mang nhiều ý nghĩa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -18193,7 +18420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (tags/v3.9.12:b28265d, Mar 23 2022, 23:52:46) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
