--- a/src/analysis/Q_Price_Corr.ipynb
+++ b/src/analysis/Q_Price_Corr.ipynb
@@ -18176,9 +18176,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tuy độ tương quan hầu như là không có, nhưng những thời điểm mà số lượng giao dịch trở lên cao, thấp bất chợt, thì tại thời điểm đó mức 4 tỉ giá cũng bị ảnh hưởng mạnh, nên có thể thấy là số lượng giao dịch tuy không có ảnh hưởng lâu dài về thời gian, nhưng cũng là một dấu hiệu cho sự biến động giá mạnh\n",
-    "\n",
-    "> giờ ta thử xem các giá của symbol này có độ tương quan lớn với nhau không, với mục này ta chỉ xét trên một loại giá là 'High price'"
+    "> Tuy độ tương quan hầu như là không có, nhưng những thời điểm mà số lượng giao dịch trở lên cao, thấp bất chợt, thì tại thời điểm đó mức 4 tỉ giá cũng bị ảnh hưởng mạnh, nên có thể thấy là số lượng giao dịch tuy không có ảnh hưởng lâu dài về thời gian, nhưng cũng là một dấu hiệu cho sự biến động giá mạnh"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "#### Ta thử xem các giá của symbol này có độ tương quan lớn với nhau không, với mục này ta chỉ xét trên một loại giá là 'High price'"
    ]
   },
   {
@@ -18395,13 +18402,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ta có được 115 cặp, nhưng đa số ở đây là các cặp sẽ liên quan đến các đồng tiền ổn định, cho nên việc tương quan giữa các đồng này cũng không thực sự mang nhiều ý nghĩa"
+    "> Ta có được 115 cặp, nhưng đa số ở đây là các cặp sẽ liên quan đến các đồng tiền ổn định, cho nên việc tương quan giữa các đồng này cũng không thực sự mang nhiều ý nghĩa"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
