--- a/src/analysis/Q_Tag.ipynb
+++ b/src/analysis/Q_Tag.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Xem thử mục đích xử dựng của các Token"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -1640,10 +1648,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ngoại trừ những symbol không có tag, ta có thể thấy bnb-chain có số lượng coin lớn nhất trong các tag. \n",
+    "### Ngoại trừ những symbol không có tag (chưa rõ mục đích sử dụng) mang số lượng khá lớn, thì bnb-chain có số lượng coin lớn nhất trong các tag. \n",
     "> Hãy cùng tìm hiểu các coin có trong bnb-chain"
    ]
   },
@@ -2872,7 +2881,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('NaDS')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2886,12 +2895,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12 (tags/v3.9.12:b28265d, Mar 23 2022, 23:52:46) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "479fcfcd8a781549d023ec8ee70cfd9d1bc4e10e5bc48a6e6de9df19fe23d55c"
+    "hash": "a975ed8b98c08beba37d949353546e85fb5250a2bdceb316b7e036ee961162de"
    }
   }
  },
