--- a/src/explore/Q_Data_Exploration.ipynb
+++ b/src/explore/Q_Data_Exploration.ipynb
@@ -1043,14 +1043,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Các chỉ số của đồng bị phân bố khá là lệch, về chung một phía, nên ta cũng có thể nhận ra rằng biến động trong giá trị của đồng rất lớn, nhưng sẽ không giữ đucợ trong thời gian dài"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2380,20 +2372,11 @@
     "stable_coin_df = symbols.loc[(symbols['percent_change_7d'].abs() < 0.1) & ((symbols['price'].astype(float) - 1).abs() < 0.01)]\n",
     "stable_coin_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#symbols.to_csv('../../datastore/coin_market_cap_symbols.csv', index=False)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2407,11 +2390,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12 (tags/v3.9.12:b28265d, Mar 23 2022, 23:52:46) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "479fcfcd8a781549d023ec8ee70cfd9d1bc4e10e5bc48a6e6de9df19fe23d55c"
+    "hash": "a975ed8b98c08beba37d949353546e85fb5250a2bdceb316b7e036ee961162de"
    }
   }
  },
