--- a/src/model/predict_price.ipynb
+++ b/src/model/predict_price.ipynb
@@ -12,7 +12,9 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
