CRY-35 | Collect data script

--- a/src/analysis/Q_Price_Corr.ipynb
+++ b/src/analysis/Q_Price_Corr.ipynb
@@ -2,21 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
-    "\n",
-    "import numpy"
+    "import numpy\n",
+    "from plotly.subplots import make_subplots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +158,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1229157</th>\n",
+       "      <th>1201477</th>\n",
        "      <td>BUSDRON</td>\n",
        "      <td>BUSD</td>\n",
        "      <td>RON</td>\n",
@@ -177,7 +175,7 @@
        "      <td>9651.160000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1229158</th>\n",
+       "      <th>1201478</th>\n",
        "      <td>BUSDRON</td>\n",
        "      <td>BUSD</td>\n",
        "      <td>RON</td>\n",
@@ -194,7 +192,7 @@
        "      <td>7593.482000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1229159</th>\n",
+       "      <th>1201479</th>\n",
        "      <td>BUSDRON</td>\n",
        "      <td>BUSD</td>\n",
        "      <td>RON</td>\n",
@@ -211,7 +209,7 @@
        "      <td>13883.738000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1229160</th>\n",
+       "      <th>1201480</th>\n",
        "      <td>BUSDRON</td>\n",
        "      <td>BUSD</td>\n",
        "      <td>RON</td>\n",
@@ -228,7 +226,7 @@
        "      <td>35089.087000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1229161</th>\n",
+       "      <th>1201481</th>\n",
        "      <td>BUSDRON</td>\n",
        "      <td>BUSD</td>\n",
        "      <td>RON</td>\n",
@@ -246,7 +244,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1229162 rows × 14 columns</p>\n",
+       "<p>1201482 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -257,11 +255,11 @@
        "3         ETHBTC   ETH   BTC    1669401000000    0.072188    0.072261   \n",
        "4         ETHBTC   ETH   BTC    1669402800000    0.072223    0.072479   \n",
        "...          ...   ...   ...              ...         ...         ...   \n",
-       "1229157  BUSDRON  BUSD   RON    1670943600000    4.629000    4.630000   \n",
-       "1229158  BUSDRON  BUSD   RON    1670945400000    4.620000    4.631000   \n",
-       "1229159  BUSDRON  BUSD   RON    1670947200000    4.631000    4.631000   \n",
-       "1229160  BUSDRON  BUSD   RON    1670949000000    4.630000    4.631000   \n",
-       "1229161  BUSDRON  BUSD   RON    1670950800000    4.631000    4.631000   \n",
+       "1201477  BUSDRON  BUSD   RON    1670943600000    4.629000    4.630000   \n",
+       "1201478  BUSDRON  BUSD   RON    1670945400000    4.620000    4.631000   \n",
+       "1201479  BUSDRON  BUSD   RON    1670947200000    4.631000    4.631000   \n",
+       "1201480  BUSDRON  BUSD   RON    1670949000000    4.630000    4.631000   \n",
+       "1201481  BUSDRON  BUSD   RON    1670950800000    4.631000    4.631000   \n",
        "\n",
        "         Low price  Close price      Volume  Kline Close time  \\\n",
        "0         0.072026     0.072222   1342.1624     1669397399999   \n",
@@ -270,11 +268,11 @@
        "3         0.072161     0.072212    936.2168     1669402799999   \n",
        "4         0.072197     0.072375   1115.5725     1669404599999   \n",
        "...            ...          ...         ...               ...   \n",
-       "1229157   4.620000     4.621000   5984.0000     1670945399999   \n",
-       "1229158   4.620000     4.630000   3618.0000     1670947199999   \n",
-       "1229159   4.630000     4.631000   3254.0000     1670948999999   \n",
-       "1229160   4.630000     4.631000  14415.0000     1670950799999   \n",
-       "1229161   4.630000     4.631000   3875.0000     1670952599999   \n",
+       "1201477   4.620000     4.621000   5984.0000     1670945399999   \n",
+       "1201478   4.620000     4.630000   3618.0000     1670947199999   \n",
+       "1201479   4.630000     4.631000   3254.0000     1670948999999   \n",
+       "1201480   4.630000     4.631000  14415.0000     1670950799999   \n",
+       "1201481   4.630000     4.631000   3875.0000     1670952599999   \n",
        "\n",
        "         Quote asset volume  Number of trades  Taker buy base asset volume  \\\n",
        "0                 96.776126              2657                     794.6663   \n",
@@ -283,11 +281,11 @@
        "3                 67.599402              1816                     470.6928   \n",
        "4                 80.727099              3088                     593.4310   \n",
        "...                     ...               ...                          ...   \n",
-       "1229157        27672.337000               108                    2086.0000   \n",
-       "1229158        16734.982000                42                    1642.0000   \n",
-       "1229159        15069.018000                33                    2998.0000   \n",
-       "1229160        66749.027000                92                    7577.0000   \n",
-       "1229161        17943.045000                52                    1795.0000   \n",
+       "1201477        27672.337000               108                    2086.0000   \n",
+       "1201478        16734.982000                42                    1642.0000   \n",
+       "1201479        15069.018000                33                    2998.0000   \n",
+       "1201480        66749.027000                92                    7577.0000   \n",
+       "1201481        17943.045000                52                    1795.0000   \n",
        "\n",
        "         Taker buy quote asset volume  \n",
        "0                           57.298344  \n",
@@ -296,23 +294,22 @@
        "3                           33.988586  \n",
        "4                           42.945939  \n",
        "...                               ...  \n",
-       "1229157                   9651.160000  \n",
-       "1229158                   7593.482000  \n",
-       "1229159                  13883.738000  \n",
-       "1229160                  35089.087000  \n",
-       "1229161                   8312.645000  \n",
+       "1201477                   9651.160000  \n",
+       "1201478                   7593.482000  \n",
+       "1201479                  13883.738000  \n",
+       "1201480                  35089.087000  \n",
+       "1201481                   8312.645000  \n",
        "\n",
-       "[1229162 rows x 14 columns]"
+       "[1201482 rows x 14 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "price_df = pd.read_csv(\"../Data/data.csv\")\n",
-    "price_df.drop(columns=[\"Unnamed: 0\", \"Unused field, ignore\"], inplace=True)\n",
+    "price_df = pd.read_csv(\"../../datastore/prices.csv\")\n",
     "price_df"
    ]
   },
@@ -326,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +394,7 @@
        "Close price    0.999997    0.999989   0.999990     1.000000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +566,7 @@
        "[865 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -8465,7 +8462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -8526,7 +8523,7 @@
        "Number of trades          1.000000"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8545,16 +8542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from plotly.subplots import make_subplots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -17317,6 +17305,7 @@
         }
        ],
        "layout": {
+        "height": 800,
         "template": {
          "data": {
           "bar": [
@@ -18168,6 +18157,7 @@
     "# recoloring is necessary otherwise lines from fig und fig2 would share each color\n",
     "# e.g. Linear-, Log- = blue; Linear+, Log+ = red... we don't want this\n",
     "subfig.for_each_trace(lambda t: t.update(line=dict(color=t.marker.color)))\n",
+    "subfig.update_layout(height=800)\n",
     "subfig.show()"
    ]
   },
@@ -18190,7 +18180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18199,24 +18189,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    1426.000000\n",
-       "mean        0.152925\n",
-       "std         0.367161\n",
-       "min        -0.761848\n",
-       "25%        -0.134962\n",
-       "50%         0.186292\n",
-       "75%         0.455984\n",
+       "count    1394.000000\n",
+       "mean        0.153843\n",
+       "std         0.367507\n",
+       "min        -0.762683\n",
+       "25%        -0.133610\n",
+       "50%         0.187178\n",
+       "75%         0.456969\n",
        "max         1.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18235,7 +18225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18250,7 +18240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18264,7 +18254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -18388,7 +18378,7 @@
        "  array(['BTCUSDT WBTCBUSD', '0.9901109419999654'], dtype='<U32')])"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
