--- a/src/model/predict_price.ipynb
+++ b/src/model/predict_price.ipynb
@@ -76,8 +76,7 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to python ../obtain/get_newest_price.ipynb\n",
-    "!python ../obtain/get_newest_price.py"
+    "!jupyter nbconvert --execute --to notebook --inplace ../obtain/get_newest_price.ipynb"
    ]
   },
   {
