--- a/src/obtain/get_all_price.ipynb
+++ b/src/obtain/get_all_price.ipynb
@@ -3,7 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:27:03.239788Z",
+     "iopub.status.busy": "2023-01-09T10:27:03.239598Z",
+     "iopub.status.idle": "2023-01-09T10:27:03.631077Z",
+     "shell.execute_reply": "2023-01-09T10:27:03.630529Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -15,7 +22,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:27:03.634455Z",
+     "iopub.status.busy": "2023-01-09T10:27:03.634146Z",
+     "iopub.status.idle": "2023-01-09T10:27:03.636774Z",
+     "shell.execute_reply": "2023-01-09T10:27:03.636283Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Exchange_Info_API = 'https://api.binance.com/api/v3/exchangeInfo'\n",
@@ -25,7 +39,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:27:03.638916Z",
+     "iopub.status.busy": "2023-01-09T10:27:03.638756Z",
+     "iopub.status.idle": "2023-01-09T10:27:03.641768Z",
+     "shell.execute_reply": "2023-01-09T10:27:03.641369Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def symbols_info():\n",
@@ -38,7 +59,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:27:03.643756Z",
+     "iopub.status.busy": "2023-01-09T10:27:03.643621Z",
+     "iopub.status.idle": "2023-01-09T10:27:03.645801Z",
+     "shell.execute_reply": "2023-01-09T10:27:03.645470Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def Date_to_timestamp(_time,_format = '%d/%m/%Y %H:%M:%S'):\n",
@@ -48,7 +76,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:27:03.647613Z",
+     "iopub.status.busy": "2023-01-09T10:27:03.647473Z",
+     "iopub.status.idle": "2023-01-09T10:27:03.651285Z",
+     "shell.execute_reply": "2023-01-09T10:27:03.650878Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def Price_info(symbol,step='1m',start=None,end=None,limit=500, base = '',quote=''):\n",
@@ -93,7 +128,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:27:03.653607Z",
+     "iopub.status.busy": "2023-01-09T10:27:03.653455Z",
+     "iopub.status.idle": "2023-01-09T10:35:58.126759Z",
+     "shell.execute_reply": "2023-01-09T10:35:58.126230Z"
+    }
+   },
    "outputs": [],
    "source": [
     "symbols = symbols_info()\n",
@@ -114,8 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:35:58.133054Z",
+     "iopub.status.busy": "2023-01-09T10:35:58.132872Z",
+     "iopub.status.idle": "2023-01-09T10:36:02.283196Z",
+     "shell.execute_reply": "2023-01-09T10:36:02.282747Z"
+    }
+   },
    "outputs": [],
    "source": [
     "symbols.to_csv(\"../../datastore/binance_symbols.csv\", index=False)\n",
@@ -148,7 +197,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "479fcfcd8a781549d023ec8ee70cfd9d1bc4e10e5bc48a6e6de9df19fe23d55c"
