--- a/src/obtain/get_each_price.ipynb
+++ b/src/obtain/get_each_price.ipynb
@@ -9,8 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:49.939032Z",
+     "iopub.status.busy": "2023-01-09T10:21:49.938842Z",
+     "iopub.status.idle": "2023-01-09T10:21:50.228732Z",
+     "shell.execute_reply": "2023-01-09T10:21:50.228284Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -18,7 +25,7 @@
        "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,8 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:50.255357Z",
+     "iopub.status.busy": "2023-01-09T10:21:50.255058Z",
+     "iopub.status.idle": "2023-01-09T10:21:50.257832Z",
+     "shell.execute_reply": "2023-01-09T10:21:50.257479Z"
+    }
+   },
    "outputs": [],
    "source": [
     "BINANCE_API_KEY = os.environ.get(\"BINANCE_API_KEY\")\n",
@@ -72,8 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:50.259802Z",
+     "iopub.status.busy": "2023-01-09T10:21:50.259657Z",
+     "iopub.status.idle": "2023-01-09T10:21:50.682904Z",
+     "shell.execute_reply": "2023-01-09T10:21:50.682493Z"
+    }
+   },
    "outputs": [],
    "source": [
     "exchanges = client.exchange_info()\n",
@@ -82,8 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:50.685138Z",
+     "iopub.status.busy": "2023-01-09T10:21:50.684971Z",
+     "iopub.status.idle": "2023-01-09T10:21:50.687396Z",
+     "shell.execute_reply": "2023-01-09T10:21:50.687094Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -99,8 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:50.689131Z",
+     "iopub.status.busy": "2023-01-09T10:21:50.688972Z",
+     "iopub.status.idle": "2023-01-09T10:26:59.997742Z",
+     "shell.execute_reply": "2023-01-09T10:26:59.996634Z"
+    }
+   },
    "outputs": [],
    "source": [
     "today = datetime.utcnow().replace(hour=23, minute=0, second=0, microsecond=0)\n",
