--- a/src/analysis/Q_Most_Trading.ipynb
+++ b/src/analysis/Q_Most_Trading.ipynb
@@ -2131,16 +2131,11 @@
    "source": [
     "> thời gian trung bình cho mỗi lần tăng hoặc giảm nằm ở khoảng 2-3 chu kỳ, tuy đó thì chỉ số này sẽ không được chính xác lắm khi có độ lệch chuẩn khá là cao"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2154,12 +2149,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (tags/v3.9.12:b28265d, Mar 23 2022, 23:52:46) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a975ed8b98c08beba37d949353546e85fb5250a2bdceb316b7e036ee961162de"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
