--- a/src/obtain/get_symbols.ipynb
+++ b/src/obtain/get_symbols.ipynb
@@ -3,7 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:44.778262Z",
+     "iopub.status.busy": "2023-01-09T10:21:44.778093Z",
+     "iopub.status.idle": "2023-01-09T10:21:45.154790Z",
+     "shell.execute_reply": "2023-01-09T10:21:45.154381Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -28,7 +35,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:45.179498Z",
+     "iopub.status.busy": "2023-01-09T10:21:45.179235Z",
+     "iopub.status.idle": "2023-01-09T10:21:45.181775Z",
+     "shell.execute_reply": "2023-01-09T10:21:45.181297Z"
+    }
+   },
    "outputs": [],
    "source": [
     "CMK_KEY = os.environ.get(\"COIN_MARKET_CAP_KEY\")"
@@ -37,7 +51,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:45.184109Z",
+     "iopub.status.busy": "2023-01-09T10:21:45.183960Z",
+     "iopub.status.idle": "2023-01-09T10:21:45.186139Z",
+     "shell.execute_reply": "2023-01-09T10:21:45.185783Z"
+    }
+   },
    "outputs": [],
    "source": [
     "columns = [\n",
@@ -53,7 +74,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:45.187981Z",
+     "iopub.status.busy": "2023-01-09T10:21:45.187843Z",
+     "iopub.status.idle": "2023-01-09T10:21:47.197195Z",
+     "shell.execute_reply": "2023-01-09T10:21:47.196406Z"
+    }
+   },
    "outputs": [],
    "source": [
     "SYMBOLS_LIST_API = 'https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest'\n",
@@ -71,8 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:47.199758Z",
+     "iopub.status.busy": "2023-01-09T10:21:47.199593Z",
+     "iopub.status.idle": "2023-01-09T10:21:47.202354Z",
+     "shell.execute_reply": "2023-01-09T10:21:47.202020Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_symbol_attr(symbol):\n",
@@ -87,8 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:47.204164Z",
+     "iopub.status.busy": "2023-01-09T10:21:47.204032Z",
+     "iopub.status.idle": "2023-01-09T10:21:47.209846Z",
+     "shell.execute_reply": "2023-01-09T10:21:47.209396Z"
+    }
+   },
    "outputs": [],
    "source": [
     "symbols = list(map(get_symbol_attr, raw_symbols['data']))"
@@ -96,8 +138,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:47.211839Z",
+     "iopub.status.busy": "2023-01-09T10:21:47.211693Z",
+     "iopub.status.idle": "2023-01-09T10:21:47.216841Z",
+     "shell.execute_reply": "2023-01-09T10:21:47.216413Z"
+    }
+   },
    "outputs": [],
    "source": [
     "df = pandas.DataFrame(symbols, columns=columns)"
@@ -105,8 +154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-09T10:21:47.218706Z",
+     "iopub.status.busy": "2023-01-09T10:21:47.218561Z",
+     "iopub.status.idle": "2023-01-09T10:21:47.299163Z",
+     "shell.execute_reply": "2023-01-09T10:21:47.298747Z"
+    }
+   },
    "outputs": [],
    "source": [
     "df.to_csv(\"../../datastore/coin_market_cap_symbols.csv\", index=False)"
@@ -131,7 +187,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "479fcfcd8a781549d023ec8ee70cfd9d1bc4e10e5bc48a6e6de9df19fe23d55c"
